--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,18 @@
 use_frameworks!
 
-target 'SloppySwipingNav_Example', :exclusive => true do
+target 'SloppySwipingNav_Example' do
   pod 'SloppySwipingNav', :path => '../'
 end
 
-target 'SloppySwipingNav_Tests', :exclusive => true do
+target 'SloppySwipingNav_Tests' do
   pod 'SloppySwipingNav', :path => '../'
+end
 
-  
+# cf. http://stackoverflow.com/questions/38446097/xcode-8-beta-3-use-legacy-swift-issue
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.0'
+        end
+    end
 end
